# discord-communication-assistant

./: .dockerignore  .editorconfig  .env.example  .gitignore  .gitleaksignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  GEMINI.md  README.md  code_review_md  codex_procee_review.md  codex_process.md  codex_review_md  config.yaml  fly.toml  gemini_process_review.md  gemini_review.md  pyproject.toml  setup_docs.sh  setup_part2.sh  setup_project.sh
.claude/: settings.local.json
docs/: ARCHITECTURE.md  CONVERSATION_LOG_ISSUE1.md  CONVERSATION_LOG_ISSUE15-17.md  CONVERSATION_LOG_ISSUE2.md  CONVERSATION_LOG_ISSUE3.md  CONVERSATION_LOG_ISSUE31.md  CONVERSATION_LOG_ISSUE33.md  CONVERSATION_LOG_ISSUE5.md  CONVERSATION_LOG_ISSUE8-14.md  DEVELOPMENT_LOG.md  DEVELOPMENT_LOG_PHASE1.md  DEVELOPMENT_LOG_PHASE2.md  DEVELOPMENT_PLAN.md  DEVELOPMENT_SUMMARY.md  DISCUSSION_SUMMARY.md  HANDOVER_2025-01-06.md  HANDOVER_2025-01-08.md  HANDOVER_2025-01-09.md  HANDOVER_2025-01-09_2.md  HANDOVER_2025-01-10.md  HANDOVER_2026-01-11.md  INDEX.md  ISSUES_STATUS.md  LLM_COLLAB_LOG.md  R-issue_summary.md  REQUIREMENTS.md  ROADMAP.md  TEST_PLAN.md  TROUBLESHOOTING.md  USER_GUIDE.md
scripts/: check_doc_updates.sh  check_template_compliance.sh
src/: config.py  factory.py  main.py
tests/: conftest.py  test_ai_router.py  test_anthropic_provider.py  test_bot.py  test_commands.py  test_config.py  test_db.py  test_factory.py  test_google_drive_storage.py  test_google_provider.py  test_groq_provider.py  test_handler.py  test_integration.py  test_integration_phase2.py  test_message_service.py  (+8 more)
(+104 files in other folders)
